2001-08-16  Kevin Vandersloot <kfv101@psu.edu>

	Beginnings of graphical display of cpu history and mem usage.
	Remove the cpu/mem/swap meters from the main window and add
	back the app-bar. Now there are two notebook tabs for 
	the process list and the sys monitor

	* callbacks.c (cb_switch_page): new callback when the tab is
	switched. Turn off the process updating or cpu/mem updating
	when relevant.
	
	* interface.c: seperate the process tab UI from the sysmon. Add
	them as seperate tabs.

	* procman.[c,h]: add new gint config variable indicating the
	current tab

	* load-graph.[c,h]: code stolen and modified from the multiload
	applet.

2001-08-14  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (proctable_search_table): put up an error message
	if the search string was not found.

2001-08-13  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (proctable_update_progress_bars): save the 
	last % CPU and average it with the new pcpu to get a smoother
	display.

	* interface.c: make the cpu meter timeout be faster

2001-08-13  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: chnage "nice value" to "priority" though still
	display priority as "High ( Nice -10 )". Set the tooltip delay
	to be shoter so as to be more noticable

	* interface.c: again change Nice to priority. Add underscores to
	all the menu items. Change window titile to be "Procman System
	Monitor".

	* procdialogs.c: Improve the renice dialog. Use an hscale, put
	a frame around it. Pressing renice button closes the dialog so
	a cancel button is more appropriate

2001-08-07 Kevin Vandersloot <kfv101@psu.edu>

	* interface.c : move the popup menu callbacks back to
	callbacks.c. Add a new menuitem to get info about the
	process. Just tries to man:process name.

	* callbacks.c (popup_menu_about_process): call gnome_url_show
	on the process command name. Perhaps there is a better way.

	* proctable.c (get_process_name): change this to get the