@@ -1,3 +1,12 @@
+2001-08-17  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c: add a clist to show mounted disks. 
+
+	* load-graph.c (load_graph_[start,stop]): make it so data
+	is continually taken but don't do the drawing untill a call
+	to load_graph_start. Thus switching back and forth the data
+	will remain.
+
 2001-08-16  Kevin Vandersloot <kfv101@psu.edu>
 
 	Beginnings of graphical display of cpu history and mem usage.
